--- a/index.html
+++ b/index.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random excuse generator</title>
     <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
 <body>
-    <div class="header">
-        <h1>Cancelador de Planos</h1>
-    </div>
+    <div class="wrap-col">
+        <div class="header">
 
-    <div class="center">
-            <h1 id="pt1"></h1>
-            <h1 id="pt2"></h1>
-            <h1 id="pt3"></h1>
+            <h1>Excuse Generator</h1>
+
+        </div>
+        <div class ="frase">
+            <p id="excuse"></p>
+        </div>
+        <div class="espacing">
+
+        </div>
+        <div class ="botao">
+            <button onClick="excuse()"id="clickme">Click me</button>
+        </div>
+
     </div>
     
-        <div class="botao">
-            <button class="button"onclick="excuse()">Click Here</button>
-        </div>
-        
 </body>
 <script src="script.js"></script>
 </html>
