--- a/index.html
+++ b/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Excuse Generator</title>
 </head>
+
 <body>
+    <script src="script.js"></script>
     <div class="wrap-col">
         <div class="header">
             <h1>Excuse Generator</h1>
         </div>
-        <div class ="frase">
+        <div class="frase">
             <p id="excuse"></p>
         </div>
         <div class="espacing">
         </div>
-        <div class ="botao">
-            <button onClick="excuse()"id="clickme">Click me</button>
+        <div class="botao">
+            <button onClick="excuse()" id="clickme">Click me</button>
         </div>
 
     </div>
-    
+
 </body>
-<script src="script.js"></script>
+
 </html>
